[metadata]
name = hyfetch
version = 0.0.1
description = A neofetch inspired tool for displaying hypixel player information
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/echothegoddess/hyfetch
project_urls =
    Bug Tracker = https://github.com/echothegoddess/hyfetch/issues
author = echothegoddess
keywords = fetch,neofetch,minecraft,hypixel,hyfetch
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Topic :: Utilities
    License :: OSI Approved :: MIT License


[options]
py_modules = hyfetch
install_requires =
    asyncpixel
    xdg
    aiohttp
    pillow

[options.entry_points]
console_scripts =
    hyfetch = hyfetch:main

